--- a/image_table_v5.4.ipynb
+++ b/image_table_v5.4.ipynb
@@ -42,20 +42,9 @@
     }
    ],
    "source": [
-    "# fileImg = './Data/Y3022238.png'\n",
-    "# fileImg = './Data/Y3022238L.png'\n",
-    "# fileImg = './Data/Y3022238_1.png'\n",
-    "# fileImg = './Data/Y3022238_2.png'\n",
-    "# fileImg = './Data/Y3022238_6.png'\n",
-    "# fileImg = './Data/Y3022238_n.png'\n",
     "fileImg = './Data/Y3027770.png'\n",
     "# fileImg = './Data/Y3027770L.png'\n",
-    "# fileImg = './Data/Y3024392.png'\n",
-    "# fileImg = './Data/Y3026936.png'\n",
-    "# fileImg = './Data/Y3027447.png'\n",
-    "# fileImg = './Data/Y4009562.png'\n",
     "\n",
-    "# fileImg = input('Image(請寫出完整路徑及檔名)= ')\n",
     "print('fileImg= ', fileImg)"
    ]
   },
@@ -84,19 +73,11 @@
     }
    ],
    "source": [
-    "# os.path.basename() 僅擷取檔案的\"檔名+副檔名\"，不包含\"路徑\"\n",
-    "# os.path參考來源：https://docs.python.org/zh-tw/3/library/os.path.html，作者：python官方網站，查詢日期：2023.03.04\n",
-    "# os.path參考來源：https://shengyu7697.github.io/python-os-path-basename/，作者：ShengYu Talk，查詢日期：2023.03.04\n",
     "basename = os.path.basename(fileImg)\n",
     "print('basename= ', basename)\n",
-    "# os.path.splitext() 拆分檔案名稱，拆分結果為\"路徑+檔名\" 和\"副檔名\" 2項，後綴[0]取\"路徑+檔名\"，後綴[1]取\"副檔名\"\n",
     "filename = os.path.splitext(basename)[0]\n",
     "print('filename= ', filename)\n",
     "\n",
-    "# cv2.imread參考來源：https://docs.opencv.org/4.x/d4/da8/group__imgcodecs.html，作者：opencv官方網站，查詢日期：2023.03.04\n",
-    "# cv2.imread參考來源：https://blog.gtwang.org/programming/opencv-basic-image-read-and-write-tutorial/，作者：G.T.Wang，查詢日期：2023.03.04\n",
-    "# CV+深度學習:AI最完整的跨套件Python人工智慧電腦視覺，p2-2，作者：繆鵬，2020年4月 初刷\n",
-    "# OpenCV影像創意邁向AI視覺王者歸來，作者：洪錦魁，2022年\n",
     "# cv2.imread() 載入圖片，參數\"0\" 轉為灰階\n",
     "img = cv2.imread(fileImg, 0)\n",
     "plot = plt.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))\n",
@@ -140,9 +121,6 @@
     "plt.subplot(132), plt.imshow(img_bin, cmap='gray')\n",
     "plt.title('img_bin')\n",
     "\n",
-    "# OTSU(大津)演算法：https://zh.wikipedia.org/wiki/%E5%A4%A7%E6%B4%A5%E7%AE%97%E6%B3%95，作者：G.T.Wang，查詢日期：2023.03.04\n",
-    "# 不同演算演算法：https://docs.opencv.org/4.x/d7/d4d/tutorial_py_thresholding.html，作者：opencv官方網站，查詢日期：2023.03.04\n",
-    "# 不同演算演算法：https://ithelp.ithome.com.tw/articles/10247721，作者：嗡嗡，查詢日期：2023.03.04\n",
     "# cv2.threshold() 將圖像二值化(黑或白)，二值化閾值可使用\"BINARY\" 或\"OSTU\"\n",
     "# 等號左邊的threshImg 輸出判定閾值\n",
     "# cv2.THRESH_BINARY(二分法) 需指定閾值界線，低於界線的值變為0，高於界線的值變為255(最大值)\n",
@@ -173,9 +151,6 @@
     }
    ],
    "source": [
-    "# cv2.getStructuringElement參考來源：https://docs.opencv.org/4.x/d4/d76/tutorial_js_morphological_ops.html，作者：opencv官方網站，查詢日期：2023.03.04\n",
-    "# cv2.getStructuringElement參考來源：https://opencv24-python-tutorials.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_morphological_ops/py_morphological_ops.html，作者：opencv官方網站(舊版)，查詢日期：2023.03.04\n",
-    "# cv2.getStructuringElement參考來源：https://hackmd.io/@cws0701/B1AxRjijq，作者：Gina，查詢日期：2023.03.04\n",
     "# cv2.getStructuringElement() 建立結構矩陣，矩陣內每個值皆為1\n",
     "# 矩陣形式為(column(列), row(行))\n",
     "# cv2.MORPH_RECT 矩陣形式為矩形，cv2.MORPH_CROSS 矩陣形式為十字，cv2.MORPH_ELLIPSE 矩陣形式為橢圓\n",
@@ -219,7 +194,6 @@
     }
    ],
    "source": [
-    "# CV+深度學習:AI最完整的跨套件Python人工智慧電腦視覺，pp2-2~2-3，作者：繆鵬，2020年4月 初刷\n",
     "# opencv紀錄圖像的格視為H(高度)*W(寬度)*C(通道數)，通道數指RGB3色域\n",
     "# 提取圖像高度及寬度並記錄\n",
     "img_height = img.shape[0]\n",
@@ -301,8 +275,6 @@
    "source": [
     "plt.figure(figsize= (30, 30))\n",
     "\n",
-    "# cv2.rode、cv2.dilate參考來源：https://docs.opencv.org/4.x/d4/d76/tutorial_js_morphological_ops.html，作者：opencv官方網站，查詢日期：2023.03.04\n",
-    "# cv2.getStructuringElement參考來源：https://hackmd.io/@cws0701/B1AxRjijq，作者：Gina，查詢日期：2023.03.04\n",
     "# 處理影像並拆分出需要的垂直線vertical\n",
     "# 建立1個矩陣尺寸為 \"1* np.array(img).shape[1]//100\" (np.array(img).shape[1]指建立1個符合img圖像全尺寸的陣列，//指結果取整數)\n",
     "# ver_kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (1, np.array(img).shape[1]//100))\n",
@@ -420,8 +392,6 @@
    "source": [
     "plt.figure(figsize=(30, 30))\n",
     "\n",
-    "# cv2.addWeighted參考來源：https://docs.opencv.org/4.x/d5/dc4/tutorial_adding_images.html，作者：opencv官方網站，查詢日期：2023.03.04\n",
-    "# cv2.addWeighted參考來源：https://blog.csdn.net/qq_44262417/article/details/89016854，作者：wave.lt，查詢日期：2023.03.04\n",
     "# cv2.addWeighted() 合併2個值，可以加入權重\n",
     "# 合併 \"vertical_lines\"和 \"horizontal_lines\"，權重皆為50%，第3個權重為添加到每個總和的標量\n",
     "vertical_horizontal_lines = cv2.addWeighted(vertical_lines, 0.5, horizontal_lines, 0.5, 0.0)\n",
@@ -448,9 +418,6 @@
     "# plt.title('global and otsu thresholding'), plt.xticks([]), plt.yticks([])\n",
     "# plt.title('顯示全域二值化結果'), plt.xticks([]), plt.yticks([])\n",
     "plt.title('global and thresholding'), plt.xticks([]), plt.yticks([])\n",
-    "# cv2.bitwise_xor、cv2.bitwise_not參考來源：https://docs.opencv.org/4.x/d2/de8/group__core__array.html，作者：opencv官方網站，查詢日期：2023.03.04\n",
-    "# cv2.bitwise_xor、cv2.bitwise_not參考來源：https://steam.oxxostudio.tw/category/python/ai/opencv-mask.html，作者：STEAM 教育學習網，查詢日期：2023.03.04\n",
-    "# cv2.bitwise_xor、cv2.bitwise_not參考來源：https://www.wongwonggoods.com/python/python_opencv/opencv-bitwise_or-and-xor-not/，作者：HOWARD WENG，查詢日期：2023.03.04\n",
     "# cv2.bitwise_xor() 互斥或判定，若像素位置 \"img 及 vertical_horizontal_lines\"相同則輸出\"0\"，只符合其1則輸出\"1\"\n",
     "bitxor = cv2.bitwise_xor(img, vertical_horizontal_lines)\n",
     "plt.subplot(325), plt.imshow(cv2.cvtColor(bitxor, cv2.COLOR_BGR2RGB))\n",
@@ -1898,8 +1865,6 @@
     }
    ],
    "source": [
-    "# cv2.findContours參考來源：https://docs.opencv.org/4.x/d4/d73/tutorial_py_contours_begin.html，作者：opencv官方網站，查詢日期：2023.03.04\n",
-    "# cv2.findContours參考來源：https://www.jianshu.com/p/4daf1f7e69e0，作者：xxxss，查詢日期：2023.03.04\n",
     "# cv2.findContours() 尋找圖像中的輪廓點座標\n",
     "# cv2.findContours() 函式返回兩個輸出引數。第一個輸出引數包含輪廓的位置點和列表中的座標，第二個輸出引數包含輪廓的層次結構\n",
     "# cv2.findContours() 函式的第一個輸入是二進位制或灰度影象，第二個輸入引數是用於定義輪廓層次結構的檢索模式\n",
@@ -1938,8 +1903,6 @@
     "boundingBoxes = []\n",
     "# 從contours陣列中提取單一contour\n",
     "for contour in contours:\n",
-    "    # cv2.boundingRect參考來源：https://docs.opencv.org/4.x/dd/d49/tutorial_py_contour_features.html，作者：opencv官方網站，查詢日期：2023.03.04\n",
-    "    # cv2.boundingRect參考來源：https://www.jianshu.com/p/6bde79df3f9d，作者：xxxss，查詢日期：2023.03.04\n",
     "    # cv2.boundingRect() 使用1個最小矩形擬合contour並紀錄為\"x, y, w, h\"後取出，存入boundingBoxes中\n",
     "    # x,y是矩形的左上角點座標，w是矩形在x座標上的長度，h是矩形在y座標的長度\n",
     "    # 將contour的4點座標轉換為\"x, y, w, h\"\n",
@@ -3209,10 +3172,6 @@
     }
    ],
    "source": [
-    "# zip參考來源：https://docs.python.org/zh-tw/3/library/functions.html?highlight，作者：python官方網站，查詢日期：2023.03.04\n",
-    "# zip參考來源：https://www.runoob.com/python/python-func-zip.html，作者：runoob.com ，查詢日期：2023.03.04\n",
-    "# sorted參考來源：https://docs.python.org/zh-tw/3/howto/sorting.html，作者：python官方網站，查詢日期：2023.03.04\n",
-    "# sorted參考來源：https://www.runoob.com/python/python-func-sorted.html，作者：runoob.com ，查詢日期：2023.03.04\n",
     "# 將contours與boundingBoxes鏈結\n",
     "# zip() 可將不同變數做鏈結\n",
     "# sorted 將list重原本的位置取出後重新排序，不影響原list內容，sorted前面的\"*\" 可以解除一階打包\n",
@@ -3260,7 +3219,6 @@
     "    x, y, w, h = cv2.boundingRect(contour)\n",
     "    # 如果在w<1000和h<500的範圍\n",
     "    if (w<1000 and h<500):\n",
-    "        # cv2.rectangle參考來源：https://docs.opencv.org/4.x/dc/da5/tutorial_py_drawing_functions.html，作者：opencv官方網站，查詢日期：2023.03.04\n",
     "        # cv2.rectangle() 繪出矩形，矩形會畫在img上，矩形左上角座標點\"x,y\"，矩形右下角座標點\"x+w,y+h\"，\"0,255,0\"矩形顏色，\"3\"矩形框線粗細\n",
     "        img_boxes = cv2.rectangle(img, (x,y), (x+w,y+h), (0,255,0), 1)\n",
     "        # 將\"x, y, w, h\"以指定格是存入boxes\n",
@@ -3351,7 +3309,6 @@
     "# heights = [boundingBoxes[i][3] for i in range(len(boundingBoxes))]\n",
     "print('heights= ', heights)\n",
     "\n",
-    "# np.mean參考來源：https://numpy.org/doc/stable/reference/generated/numpy.mean.html，作者：numpy官方網站，查詢日期：2023.03.04\n",
     "# np.mean() 取平均值，將heights做平均計算\n",
     "mean = np.mean(heights)\n",
     "print('mean= ', mean)\n",
@@ -3420,8 +3377,6 @@
     "for i in range(len(rows)):\n",
     "    rowslens.append(len(rows[i]))\n",
     "print('rowslens= ', rowslens)\n",
-    "# statistics.mode參考來源：https://docs.python.org/zh-tw/3/library/statistics.html，作者：python官方網站，查詢日期：2023.03.04\n",
-    "# statistics.mode參考來源：https://steam.oxxostudio.tw/category/python/library/statistics.html，作者：STEAM 教育學習網，查詢日期：2023.03.04\n",
     "# statistics.mode() 可用來尋找list中的眾數\n",
     "count = statistics.mode(rowslens)\n",
     "print('count= ', count)\n",
@@ -4637,16 +4592,12 @@
     "    # 從len(rows[i])提出第\"j\"項\n",
     "    for j in range(len(rows[i])):\n",
     "        # diff 取各個rows中心點往rows的x座標一半的長度\n",
-    "        # abs參考來源：https://docs.python.org/zh-tw/3/library/functions.html?highlight，作者：python官方網站，查詢日期：2023.03.04\n",
-    "        # abs參考來源：https://www.runoob.com/python/func-number-abs.html，作者：runoob.com，查詢日期：2023.03.04\n",
     "        # abs() 取絕對值\n",
     "        # 取center-(rows第\"i\"項(列i)的第\"j\"項(行j)的\"0\"號位(x)+第\"i\"項(列i)的第\"j\"項(行j)的\"2\"號位(w)/4)\n",
     "        diff = abs(center-(rows[i][j][0]+rows[i][j][2]/4))\n",
     "        print('difflens= ', len(diff))\n",
     "        print('diff= ', diff)\n",
     "        # minimum 從各個diff中找最小值\n",
-    "        # min參考來源：https://docs.python.org/zh-tw/3/library/functions.html?highlight，作者：python官方網站，查詢日期：2023.03.04\n",
-    "        # min參考來源：https://www.runoob.com/python/func-number-min.html，作者：runoob.com，查詢日期：2023.03.04\n",
     "        # min() 取最小值\n",
     "        minimum = min(diff)\n",
     "        print('minimum= ', minimum)\n",
@@ -4721,9 +4672,6 @@
     "\n",
     "\n",
     "# 重新訓練tessercat-ocr的tessdata，提高圖像中文字辨識度\n",
-    "# tesseract訓練tessdata參考來源：https://github.com/tesseract-ocr/tesstrain，作者：tesseract-ocr官方網站，查詢日期：2023.03.04\n",
-    "# tesseract訓練tessdata參考來源：https://blog.csdn.net/qq_31112205/article/details/100159963，作者：SeventhBlue，查詢日期：2023.03.04\n",
-    "# lstm訓練tessdata參考來源：https://hackmd.io/@garyli-wd/rJ619THsO#Tesseract-OCR-LSTM%E6%A8%A1%E5%9E%8B%E8%A8%93%E7%B7%B4%E6%8C%87%E5%8D%97，作者：李文丁，查詢日期：2023.03.04\n",
     "# eng_1_config = r'--tessdata-dir \"D:\\Study\\Code\" -l eng_1_0305'\n",
     "eng_1_config = r'-l eng_1_0305'"
    ]
@@ -6993,14 +6941,10 @@
     "                # 變更遮罩尺寸\n",
     "                kernel_ocr = cv2.getStructuringElement(cv2.MORPH_RECT, (1,1))\n",
     "                print('kernel= \\n', kernel_ocr)\n",
-    "                # cv2.copyMakeBorder參考來源：https://docs.opencv.org/4.x/dc/da3/tutorial_copyMakeBorder.html，作者：opencv官方網站，查詢日期：2023.03.04\n",
-    "                # cv2.copyMakeBorder參考來源：https://blog.csdn.net/qq_36560894/article/details/105416273，作者：我是大黄同学呀，查詢日期：2023.03.04\n",
     "                # border 邊界\n",
     "                # cv2.copyMakeBorder() 在roi像素範圍外建立邊框，上下左右寬度=2，邊框位置以顏色填滿，顏色為白色\n",
     "                border = cv2.copyMakeBorder(roi, 2, 2, 2, 2, cv2.BORDER_CONSTANT, value=[255,255])\n",
     "                # border = cv2.copyMakeBorder(roi, 3, 3, 3, 3, cv2.BORDER_CONSTANT, value=[255,255])\n",
-    "                # cv2.resize參考來源：https://docs.opencv.org/4.x/da/d54/group__imgproc__transform.html，作者：opencv官方網站，查詢日期：2023.03.04\n",
-    "                # cv2.resize參考來源：https://shengyu7697.github.io/python-opencv-resize/，作者：ShengYu Talk，查詢日期：2023.03.04\n",
     "                # resizing 調整大小\n",
     "                # cv2.resize() 調整圖像，\"fx=2, fy=2\"圖像x,y放大2倍，\"interpolation=cv2.INTER_CUBIC\"放大方式 4x4像素鄰域的雙三次插值\n",
     "                resizing = cv2.resize(border, None, fx=2, fy=2, interpolation=cv2.INTER_CUBIC)\n",
@@ -7010,16 +6954,10 @@
     "                # cv2.erode() 侵蝕\n",
     "                erosion = cv2.erode(dilation, kernel_ocr, iterations=2)\n",
     "                # erosion = cv2.erode(dilation, kernel_ocr, iterations=1)\n",
-    "                # 改為先侵蝕再膨脹\n",
-    "                # erosion = cv2.erode(resizing, kernel_ocr, iterations=2)\n",
-    "                # dilation = cv2.dilate(erosion, kernel_ocr, iterations=1)\n",
     "                out_plot = plt.subplot(211), plt.imshow(cv2.cvtColor(erosion, cv2.COLOR_BGR2RGB))\n",
     "                # out_plot = plt.subplot(211), plt.imshow(cv2.cvtColor(resizing, cv2.COLOR_BGR2RGB))\n",
-    "                # pytesseract.image_to_string參考來源：https://github.com/tesseract-ocr/tesstrain，作者：tesseract-ocr官方網站，查詢日期：2023.03.04\n",
-    "                # pytesseract.image_to_string參考來源：https://ithelp.ithome.com.tw/articles/10227263，作者：oxygenTW，查詢日期：2023.03.04\n",
-    "                # pytesseract.image_to_string() 從圖像中辨識文字\n",
+    "                 pytesseract.image_to_string() 從圖像中辨識文字\n",
     "                out = pytesseract.image_to_string(erosion)\n",
-    "                # out = pytesseract.image_to_string(dilation)\n",
     "                # out = pytesseract.image_to_string(resizing)\n",
     "                # 使用自訓練集做文字辨識\n",
     "                # out = pytesseract.image_to_string(erosion, config=eng_1_config)\n",
@@ -7249,10 +7187,7 @@
     "\n",
     "str_dataframe_final = []\n",
     "for i in dataframe_final:\n",
-    "    str_i = str(i)\n",
-    "    # re.sub參考來源：https://docs.python.org/zh-tw/3/library/re.html，作者：python官方網站，查詢日期：2023.03.04\n",
-    "    # re.sub參考來源：http://kaiching.org/pydoing/py/python-library-re.html，作者：Kaiching Chang，查詢日期：2023.03.04\n",
-    "    # re.sub(pattern, repl, string, count=0, flags=0) 將指定內容作替換，\n",
+    "    str_i = str(i)# re.sub(pattern, repl, string, count=0, flags=0) 將指定內容作替換，\n",
     "    # pattern替換前的內容，repl是替換後的內容，string是愈替換的變數，count是要替換的數量(0預設為全部替換)，flags如果沒找到回傳none\n",
     "    str_i = re.sub('^ |\\n', '', str_i, count=0, flags=0)\n",
     "    str_i = re.sub('l', '1', str_i, count=0, flags=0)\n",
@@ -7338,7 +7273,6 @@
     "arr = np.array(str_dataframe_final)\n",
     "arr\n",
     "\n",
-    "# np.char.upper參考來源：https://numpy.org/doc/stable/reference/generated/numpy.char.upper.html，作者：numpy官方網站，查詢日期：2023.03.04\n",
     "# np.char.upper()將所有字元轉為大寫\n",
     "arr = np.char.upper(arr)\n",
     "arr"
@@ -7395,7 +7329,6 @@
    "source": [
     "# import pandas as pd\n",
     "\n",
-    "# pd.DataFrame參考來源：https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html，作者：pandas官方網站，查詢日期：2023.03.04\n",
     "# pd.DataFrame() 建立DataFrame(表格矩陣)\n",
     "# arr.reshape() 指定陣列尺寸\n",
     "dataframe = pd.DataFrame(arr.reshape(len(rows), total_cells))\n",
@@ -7403,7 +7336,6 @@
     "print('total_cells= ', total_cells)\n",
     "print('dataframe= \\n', dataframe)\n",
     "print('dataframe_type= ', type(dataframe))\n",
-    "# dataframe.style.set_properties參考來源：https://pandas.pydata.org/docs/reference/api/pandas.io.formats.style.Styler.set_properties.html，作者：pandas官方網站，查詢日期：2023.03.04\n",
     "# style.set_properties(align='left')是pandas將表格內容靠左的功能\n",
     "# data 紀錄dataframe靠左顯示的結果\n",
     "data = dataframe.style.set_properties(align='left')\n",
